--- a/timeseries_analyses/timeseries_power_simulation.Rmd
+++ b/timeseries_analyses/timeseries_power_simulation.Rmd
@@ -21,34 +21,17 @@ wincorr=load_fmri_data('wincorr')
 Get the timeseries representations for Default Mode connectivity (y) and positive mood (x).
 ```{r}
 alldays=get_alldays(behav,wincorr)
-behav_keep=subset(behav,select=c(date,panas.positive))
+behav_keep=subset(behav,select=c(date,panas.fatigue))
 y=get_x_ts(behav_keep,alldays)
-x=get_y_ts(wincorr,alldays,1)
+x=get_y_ts(wincorr,alldays,10)
 ```
 
-Compute the timeseries model on the x variable, to get its ARIMA characteristics
-```{r}
-x_arma=auto.arima(x)
-```
 
-Compute the timeseries model on the y variable, including the x regressor
+Compute the power for a Pearson correlation
 ```{r}
-reg_arma=auto.arima(y,xreg=x)
-```
-
-Loop through simulation to generate data and assess model.  First generate a simulated X regressor that has the same timeseries characteristics and residual variance as the true X variable.  Then generate a simulated Y variable that has the same timeseries characteristics as the observed Y variable after modeling the X variable.  The sample a number of timepoints, using the actual timepoints spacing from the study, setting all others to NA.  Compute the model on those simulated data and store the p value for the X regressor.
-```{r}
-p_x=c()
-for (i in 1:1000) {
-  x_sim=arima.sim(n=length(alldays),list(ar=c(x_arma$coef[1])),sd=sd(x_arma$residuals,na.rm=TRUE))
-  y_sim = arima.sim(n = length(alldays), list(ar=c(reg_arma$coef[1])), sd = sd(reg_arma$residuals,na.rm=TRUE)) + x_sim*reg_arma$coef[3]
-  y_sim[is.na(x)]=NA
-  a=auto.arima(y_sim,xreg=x_sim)
-  pvals=data.frame(cwp(a))
-  p_x=rbind(p_x,pvals[4,which(names(pvals)=="x_sim")])
-}
-
-print(c('power:',mean(p_x<0.05)))
+cor.pear=cor(x,y,use='complete.obs')
+library(pwr)
+n.days.80per.power.pearson = ceiling(pwr.r.test(r = cor.pear, sig.level = 0.05, power = 0.8, alternative = "greater")$n)
 
 ```
 
