added note about MB upgrade

--- a/quality_assurance/QA_summary_func.ipynb
+++ b/quality_assurance/QA_summary_func.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a2814a5d15447923c1dfb30ebb6f2e33482db93ffa5e397445487a31d748a32a"
+  "signature": "sha256:ed5a894fd0f894278e67a94e36af48a3dc44152e8ac11e0c009d3ab5e74637bd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -563,7 +563,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Median Distance Index [func_quality]: The mean distance (1 \u2013 spearman\u2019s rho) between each time-point\u2019s volume and the median volume using AFNI\u2019s 3dTqual command (http://afni.nimh.nih.gov/afni), lower values are better. Uses functional time-series."
+      "Median Distance Index [func_quality]: The mean distance (1 \u2013 spearman\u2019s rho) between each time-point\u2019s volume and the median volume using AFNI\u2019s 3dTqual command (http://afni.nimh.nih.gov/afni), lower values are better. Uses functional time-series.\n",
+      "\n",
+      "The substantial dip in MDI values occuring between sessions 73 and 74 (sub092 and sub094) coincided with an upgrade to Release R010b of the CMRR multi-band EPI sequence."
      ]
     },
     {
