--- a/myconnectome/timeseries/timeseries_analyses.Rmd
+++ b/myconnectome/timeseries/timeseries_analyses.Rmd
@@ -9,88 +9,41 @@ This notebook runs all of the timeseries analyses presented in the MyConnectome 
 
 First we need to load some relevant libraries:
 
-```{r message=FALSE}
+```{r setup,message=FALSE}
 library(forecast)
 library(knitr)
-source('http://s3.amazonaws.com/openfmri/ds031/timeseries_analyses/load_myconnectome_data.R')
-source('http://s3.amazonaws.com/openfmri/ds031/timeseries_analyses/est_bivariate_arima_model.R')
 
+source('../config.R')
+
+source('../timeseries/load_myconnectome_data.R')
+
+source('../timeseries/timeseries_helpers.R')
+
+source('../timeseries/est_bivariate_arima_model.R')
+
+thresh=0.05  # FDR threshold
 save_latex=TRUE
-```
-
-Make a wrapper for kable that can detect empty datasets
-
-```{r}
-kable_wrap = function(data,fdr_thresh=0.1) {
-  data = data[data$pval_bh<fdr_thresh,]
-  if (nrow(data)>0) {kable(data)} else {print('no significant results')}
-}
+OUTPUT_DIR=sprintf('%s/timeseries',basedir)
 
 ```
 
-Make a function to generate latex tables.
-```{r}
-kable_latex = function(data,varname,tabledir='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/timeseries_analysis_tables') {
-    if (nrow(data) > 30) {lt=TRUE} else {lt=FALSE}
-    k=kable(data,format='latex',longtable=lt,digits=3,row.names=FALSE)
-    write(k,file=sprintf('%s/%s_timeseries_stats.tex',tabledir,varname))
-}
-```
 
-Make a function to output the results to the appropriate file.
 
-```{r}
-output_results=function(d,vnames,fdr_thresh=0.1,save_latex=TRUE,save_table=TRUE,OUTPUT_DIR='/tmp') {
-  vname=sprintf('%s_%s',vnames[1],vnames[2])
-  ds=d[d$pval_bh<fdr_thresh,]
-  ds=subset(ds,select=c(xvar,yvar,cor.val,t.arima,pval_bh,nobs))
-  names(ds)=c(sprintf("X:%s",vnames[1]),sprintf("Y:%s",vnames[2]),'r','t','p (BH)','N')
-  if (save_table) {
-    write.table(d,file=paste(OUTPUT_DIR,sprintf('out.dat.%s.txt',vname),sep='/'))
-  }
-  if (save_latex) {
-    kable_latex(ds,vname)
-  }
-}
-```
-
-If you would like your results to be put into a specific place, then set the variable OUTPUT_DIR to that value.  This puts them in a specific place on my computer.
-
-```{r}
-
-if (file.exists('/Users/poldrack/Dropbox/data/selftracking/timeseries_analyses')) {
-  print("Looks like we are on Russ's computer, using default OUTPUT_DIR")
-	OUTPUT_DIR='/Users/poldrack/Dropbox/data/selftracking/timeseries_analyses'
-}
-
-if (!exists('OUTPUT_DIR')) {
-	print('To save results to a specific directory, set OUTPUT_DIR variable to target directory')
-	OUTPUT_DIR=NULL 
-} else{
-	print(c('Saving results to:',OUTPUT_DIR))
-}
-	
-if (is.null(OUTPUT_DIR)) {
-	OUTPUT_DIR='timeseries_results'
-	print('creating output directory: ./timeseries_results')
-	dir.create(OUTPUT_DIR)
-	}
-
-```
 
 
 Load all of the relevant data, changing the variable names as needed.
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r loadData, message=FALSE,warning=FALSE,error=FALSE}
 behav=load_behav_data()
 wincorr=load_fmri_data('wincorr')
 bwcorr=load_fmri_data('bwcorr')
-
-
+netdat=load_network_data()
 fd=load_fd_data()
 food=load_food_data()
 rnaseq_wgcna=load_rnaseq_data(limit_ME_to_enriched=FALSE)
 metab=load_metab_data()
+pindex=load_participation_index()
+
 data_names=c()
 for (i in 1:(dim(metab)[2]-1)) {
     data_names=rbind(data_names,sprintf('C%d:%s',i,names(metab)[i]))
@@ -117,7 +70,7 @@ immport=load_ImmPort_data()
 
 Create the subset of data that we are interested in for the behavioral analysis - generate a version without the tuesday/thursday variable for use with the blood data (which are only on tuesdays)
 
-```{r}
+```{r behavSubset}
 xvars=c('panas.positive','panas.negative','panas.fatigue','afterscan.Anxietyduringscan','afterscan.diastolic','afterscan.pulse','afterscan.systolic','morning.Sleepquality','morning.Soreness','prevevening.Alcohol','prevevening.Guthealth','prevevening.Psoriasisseverity','prevevening.Stress', 'prevevening.Timespentoutdoors','TuesThurs', 'temp.mean',"email.LIWCcdi","email.LIWCnegemo","email.LIWCposemo",'zeo.zq')
 
 behav_keep=subset(behav,select=c(xvars,'date'))
@@ -130,7 +83,7 @@ For each set of variables, run the regression model and save outputs.
 
 ####Behavioral variables vs. each other:
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r BehavBehav,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('behav','behav')
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
   print("loading existing file...")
@@ -148,7 +101,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ####Within-module connectivity vs. behavior
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r wincorrBehav,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('wincorr','behav')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -168,7 +121,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ####Between-module connectivity vs. behavior
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r bwcorrBehav,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('bwcorr','behav')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -184,11 +137,47 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ```
 
+####Network measures vs. behavior
+
+```{r netdatBehav,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('netdat','behav')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(netdat,behav_keep)}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
+####Participation index vs. behavior
+
+```{r PIbehav,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('pindex','behav')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(pindex,behav_keep)}
+```
+
+```{r  results="asis"}
+print('skipping printout')
+
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
 
 ####Behavior vs. RNA-seq:
 
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r wgcnaBehav,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('wgcna','behav')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -207,7 +196,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 #### Within-module connectivity vs. RNA-seq
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r wgcnaWincorr,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('wgcna','wincorr')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -224,7 +213,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 #### Between-module connectivity vs. RNA-seq
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r wgcnaBwcorr,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('wgcna','bwcorr')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -240,11 +229,28 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ```
 
+#### Network measures vs. RNA-seq
+```{r wgcnaNetdat,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('wgcna','netdat')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(rnaseq_wgcna,netdat,spacing='1 week')}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
 
 
 ####ImmPort immune genes vs behavior
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r immportBehav,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('immport','behav')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -261,7 +267,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 #### Test specific hypothesis regarding psoriasis
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r psorImmport,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('psoriasis','immport')
 psoriasis=subset(behav,select=c(date,prevevening.Psoriasisseverity))
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -281,7 +287,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ####ImmPort immune genes vs within-module connectivity
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r immportWincorr,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('immport','wincorr')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -297,8 +303,44 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ```
 
+####ImmPort immune genes vs between-module connectivity
+
+```{r immportBwcorr,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('immport','bwcorr')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(immport,bwcorr,spacing='1 week')}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
+####ImmPort immune genes vs network measures
+
+```{r immportNetdat,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('immport','netdat')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(immport,netdat,spacing='1 week')}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
 ####ImmPort immune genes vs food
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r foodImmport,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('food','immport')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -315,7 +357,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 ####ImmPort immune genes vs metabolism
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r immportMetab,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('immport','metab')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -332,7 +374,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 ####ImmPort immune genes vs metabolism (full set)
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r immportFullmetab,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('immport','fullmetab')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -352,7 +394,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 #### food vs. metabolism
 note: food needs to be X variable because auto.arima doesn't handle binary Y variable
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r foodMetab,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('food','metab')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -370,7 +412,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 #### food vs. metabolism (individual metabolites)
 note: food needs to be X variable because auto.arima doesn't handle binary Y variable
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r foodFullmetab,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('food','fullmetab')
 
@@ -389,7 +431,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 
 #### behav vs. metabolsm
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r behavMetab,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('behav','metab')
 
@@ -407,7 +449,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 #### behav vs. metabolsm (full set)
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r behavFullmetab,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('behav','fullmetab')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -425,7 +467,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 
 ####metabolism vs. within-network connectivity
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r metabWincorr,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('metab','wincorr')
 
@@ -443,7 +485,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 ####metabolism vs. within-network connectivity (full set of metabolites)
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r fullmetabWincorr,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('fullmetab','wincorr')
 
@@ -460,8 +502,44 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ```
 
+####metabolism vs. between-network connectivity
+```{r metabBwcorr,message=FALSE,warning=FALSE,error=FALSE}
+
+vnames=c('metab','bwcorr')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(metab,bwcorr,spacing='1 week')}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
+####metabolism vs. within-network connectivity (full set of metabolites)
+```{r fullmetabBwcorr,message=FALSE,warning=FALSE,error=FALSE}
+
+vnames=c('fullmetab','bwcorr')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(fullmetab,bwcorr,spacing='1 week')}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
 ####metabolism vs. metabolism
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r metabMetab,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('metab','metab')
 
@@ -480,7 +558,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 
 #### within-network connectivity 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r wincorrWincorr,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('wincorr','wincorr')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -496,10 +574,75 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ```
 
+#### between-network connectivity 
+```{r bwcorrBwcorr,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('bwcorr','bwcorr')
 
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(bwcorr,bwcorr,skip_ident=TRUE)}
+```
+
+```{r  results="asis"}
+print('skipping printout')
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
+#### within-network connectivity vs. network measures
+```{r wincorrNetdat,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('wincorr','netdat')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(wincorr,netdat)}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
+#### between-network connectivity vs. network measures
+```{r bwcorrNetdat,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('bwcorr','netdat')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(bwcorr,netdat)}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
+#### network measures
+```{r netdatNetdat,message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('netdat','netdat')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(netdat,netdat,skip_ident=TRUE)}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
 
 #### food vs. within-network connectivity
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r foodWincorr,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('food','wincorr')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -518,7 +661,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 #### food vs. behavior
 Remove food variables that have too many zeros or ones, otherwise will fail
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r foodBehav,message=FALSE,warning=FALSE,error=FALSE}
 food$apples=NULL  
 food$blueberries=NULL
 behav_keep_no_tth$zeo.zq=NULL
@@ -541,7 +684,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 #### compare head motion to other measures
 
 #### FD vs. behavior
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r fdBehav,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('fd','behav')
 
@@ -559,7 +702,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 #### FD vs. RNA-seq
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r fdWgcna,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('fd','wgcna')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -577,7 +720,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 #### FD vs. metabolites
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r fdMetab,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('fd','metab')
 
@@ -595,7 +738,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 #### FD vs. wincorr
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r fdWincorr,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('fd','wincorr')
 
@@ -613,10 +756,28 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 
+#### FD vs. netdat
+```{r fdNetdat,message=FALSE,warning=FALSE,error=FALSE}
+
+vnames=c('fd','netdat')
+
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(fd,netdat)}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
 #### RNA-seq 
 
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r wgcnaWgcna,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('wgcna','wgcna')
 
@@ -634,7 +795,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 #### RNA-seq vs. metabolism
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r wgcnaMetab,message=FALSE,warning=FALSE,error=FALSE}
 vnames=c('wgcna','metab')
 
 if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
@@ -651,7 +812,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 ```
 
 #### RNA-seq vs. metabolism (full set)
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r wgcnaFullmetab,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('wgcna','fullmetab')
 
@@ -672,7 +833,7 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 #### RNA-seq vs. food
 
 
-```{r message=FALSE,warning=FALSE,error=FALSE}
+```{r foodWgcna,message=FALSE,warning=FALSE,error=FALSE}
 
 vnames=c('food','wgcna')
 
