--- a/myconnectome/metabolomics/Metabolomics_clustering.Rmd
+++ b/myconnectome/metabolomics/Metabolomics_clustering.Rmd
@@ -9,13 +9,17 @@ This is code for preprocessing of the metabolomics data for the MyConnectome stu
 
 First, load the functions that will provide the data:
 
-```{r}
-source('http://s3.amazonaws.com/openfmri/ds031/timeseries_analyses/load_myconnectome_data.R')
+```{r setup}
+source('../timeseries/load_myconnectome_data.R')
+
+source('../config.R')
+
+save_data=TRUE
 ```
 
 Load the data:
 
-```{r}
+```{r loadData}
 metab=load_metab_data(use_clustered_data=FALSE)
 metab$date=NULL
 metab=scale(metab)
@@ -23,21 +27,21 @@ metab=scale(metab)
 
 The annotation tool that we will use requires PubChem IDs, so load those:
 
-```{r}
+```{r loadCIDs}
 cids=read.table('http://s3.amazonaws.com/openfmri/ds031/metabolomics/pubmed_cids.txt')$V1
 ```
 
 
 Set up the clustering tool:
 
-```{r}
+```{r setupAP}
 library(apcluster)
 sim=corSimMat()
 ```
 
 Run the clustering:
 
-```{r}
+```{r runAP}
 ap=apcluster(sim,t(metab))
 
 ap
@@ -45,27 +49,27 @@ ap
 
 Save the clustering data and pubchem IDs for each cluster, for later use in annotation with Impala (set save_data=TRUE and change directory location to enable this)
 
-```{r}
-save_data=TRUE
+```{r saveData}
+
 if (save_data) {
   for (i in 1:length(ap@clusters)) {
     print(i)
   	for (member in 1:length(ap@clusters[[i]])) {
   		m=cids[ap@clusters[[i]]]
-  		outfilename=sprintf('/Users/poldrack/Dropbox/data/selftracking/proteomics/apclust_scaled_mod%02d.txt',i)
+  		outfilename=sprintf('%s/metabolomics/apclust_scaled_mod%02d.txt',basedir,i)
   		write.table(m,file=outfilename,col.names=FALSE,row.names=FALSE,quote=FALSE)
-    	outfilename=sprintf('/Users/poldrack/Dropbox/data/selftracking/proteomics/apclust_scaled_mod%02d_names.txt',i)
+    	outfilename=sprintf('%s/metabolomics/apclust_scaled_mod%02d_names.txt',basedir,i)
   		write.table(names(ap@clusters[[i]]),file=outfilename,col.names=FALSE,row.names=FALSE,quote=FALSE)
 
   		}
   	}
-  save(ap,file='/Users/poldrack/Dropbox/data/selftracking/proteomics/apclust.Rdata')
+  save(ap,file=sprintf('%s/metabolomics/apclust.Rdata',basedir))
 }
 ```
 
 Compute eigenconcentrations for each cluster
 
-```{r}
+```{r getEigenConc}
 
 eigenconc=c()
 meanconc=c()
@@ -82,6 +86,6 @@ for (c in 1:length(ap@clusters)) {
 
 	}
 if (save_data) {
-  write.table(eigenconc,'/Users/poldrack/Dropbox/data/selftracking/proteomics/apclust_eigenconcentrations.txt')
+  write.table(eigenconc,sprintf('%s/metabolomics/apclust_eigenconcentrations.txt',basedir))
 }
 ```
