--- a/myconnectome/timeseries/Make_timeseries_plots.Rmd
+++ b/myconnectome/timeseries/Make_timeseries_plots.Rmd
@@ -13,17 +13,23 @@ First load the relevant libraries and data.
 ```{r}
 library(forecast)
 library(knitr)
-source('http://s3.amazonaws.com/openfmri/ds031/timeseries_analyses/data_utilities.R')
-source('http://s3.amazonaws.com/openfmri/ds031/timeseries_analyses/load_myconnectome_data.R')
-source('http://s3.amazonaws.com/openfmri/ds031/timeseries_analyses/est_bivariate_arima_model.R')
+source('data_utilities.R')
 
-data=load_behav_data() 
+source('../config.R')
+
+source('load_myconnectome_data.R')
+
+source('timeseries_helpers.R')
+
+source('../timeseries/est_bivariate_arima_model.R')
+
+datamat=load_behav_data() 
 varname='behav'
 sample_spacing=1
 
 xvars=c('panas.positive','panas.negative','panas.fatigue','afterscan.Anxietyduringscan','afterscan.diastolic','afterscan.pulse','afterscan.systolic','morning.Sleepquality','morning.Soreness','prevevening.Alcohol','prevevening.Guthealth','prevevening.Psoriasisseverity','prevevening.Stress', 'prevevening.Timespentoutdoors','temp.mean',"email.LIWCcdi","email.LIWCnegemo","email.LIWCposemo",'zeo.zq')
 
-data=subset(data,select=c(xvars,'date'))
+datamat=subset(datamat,select=c(xvars,'date'))
 
 save_latex=TRUE
 
@@ -34,16 +40,16 @@ save_latex=TRUE
 
 #### Get FDR-corrected p-values for trends
 
-```{r}
+```{r behavModel}
 pvals=c()
 # first get fdr p-vals on trends
-for (varnum in 1:(dim(data)[2]-1)) {
-  alldays = seq(min(data$date), max(data$date), by='1 day')
-	alldays_weekly=seq(min(data$date), max(data$date), by='1 week')
+for (varnum in 1:(dim(datamat)[2]-1)) {
+  alldays = seq(min(datamat$date), max(datamat$date), by='1 day')
+  alldays_weekly=seq(min(datamat$date), max(datamat$date), by='1 week')
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=na.approx(zoo(x[,varnum]),maxgap=7)
 	
 	x_interp=x_ts
@@ -69,25 +75,25 @@ p_fdr=matrix(p_fdr,length(p_fdr)/2,2)
 pvals=as.data.frame(pvals)
 pvals[,3:4]=p_fdr
 names(pvals)=c('mean','var(resid)','Linear trend (p-val)','Poly trend (p-val)')
-row.names(pvals)=names(data)[1:19]
+row.names(pvals)=names(datamat)[1:19]
 
 kable(pvals)
 if (save_latex) {
   k=kable(pvals,format='latex',digits=3)
-  write(k,file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/timeseries_stats_tables/behav_timeseries_stats.tex')
+  write(k,file=sprintf('%s/timeseries/tables/behav_timeseries_stats.tex',basedir))
 }
 ```
 
 #### Make plots
 
-```{r}
-for (varnum in 1:(dim(data)[2]-1)) {
-  alldays = seq(min(data$date), max(data$date), by='1 day')
-	alldays_weekly=seq(min(data$date), max(data$date), by='1 week')
+```{r behavPlot}
+for (varnum in 1:(dim(datamat)[2]-1)) {
+  alldays = seq(min(datamat$date), max(datamat$date), by='1 day')
+	alldays_weekly=seq(min(datamat$date), max(datamat$date), by='1 week')
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=na.approx(zoo(x[,varnum]),maxgap=7,na.rm=FALSE)
 	
 	x_interp=x_ts
@@ -102,27 +108,29 @@ for (varnum in 1:(dim(data)[2]-1)) {
 	axis(1,labels=FALSE,at=seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing),xlab=FALSE)
 	offset=0.1*(max(x_ts,na.rm=TRUE)-min(x_ts,na.rm=TRUE))
 	text(seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing), par("usr")[3] - offset, labels = labels, srt = 45,adj=0.9, xpd = TRUE)
-	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(data)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))	
+	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(datamat)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))	
 }
 ```
 
-## Within-network connectivity 
+## Network measures
 
 #### Get p-values for trends
-```{r}
-data=load_fmri_data() 
-varname='wincorr'
+```{r netdatModel}
+
+datamat=load_network_data() 
+#datamat=subset(datamat,select=c(modularity_weighted,eff_weighted,date))
+varname='netdat'
 sample_spacing=1
 
 pvals=c()
 # first get fdr p-vals on trends
-for (varnum in 1:(dim(data)[2]-1)) {
-  alldays = seq(min(data$date), max(data$date), by='1 day')
-	alldays_weekly=seq(min(data$date), max(data$date), by='1 week')
+for (varnum in 1:(dim(datamat)[2]-1)) {
+  alldays = seq(min(datamat$date), max(datamat$date), by='1 day')
+	alldays_weekly=seq(min(datamat$date), max(datamat$date), by='1 week')
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=na.approx(zoo(x[,varnum]),maxgap=7)
 	
 	x_interp=x_ts
@@ -147,12 +155,12 @@ p_fdr=matrix(p_fdr,length(p_fdr)/2,2)
 pvals=as.data.frame(pvals)
 pvals[,3:4]=p_fdr
 names(pvals)=c('mean','var(resid)','Linear trend (p-val)','Poly trend (p-val)')
-row.names(pvals)=names(data)[1:13]
+row.names(pvals)=names(datamat)[1:2]
 
 kable(pvals)
 if (save_latex) {
   k=kable(pvals,format='latex',digits=4)
-  write(k,file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/timeseries_stats_tables/wincorr_timeseries_stats.tex')
+  write(k,file=sprintf('%s/timeseries/tables/netdat_timeseries_stats.tex',basedir))
 }
 
 
@@ -160,14 +168,95 @@ if (save_latex) {
 
 #### now make plots
 
-```{r}
-for (varnum in 1:(dim(data)[2]-1)) {
-	alldays = seq(min(data$date), max(data$date), by='1 day')
-	alldays_weekly=seq(min(data$date), max(data$date), by='1 week')
+```{r netdatPlot}
+for (varnum in 1:(dim(datamat)[2]-1)) {
+	alldays = seq(min(datamat$date), max(datamat$date), by='1 day')
+	alldays_weekly=seq(min(datamat$date), max(datamat$date), by='1 week')
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
+	x_ts=na.approx(zoo(x[,varnum]),maxgap=7)
+	
+	x_interp=x_ts
+	x_interp=na.approx(zoo(x[,varnum]))
+	lo <- loess(x_interp ~ seq(from=start(x_interp)[1],to=end(x_interp)[1],by=sample_spacing),span=0.5)
+	plot(x_ts,xaxt='n',xlab='',ylab=varname,col='black')
+	points(seq(from=start(x_interp)[1],to=end(x_interp)[1],by=sample_spacing),x[,varnum],pch=18)
+	lines(seq(from=start(x_interp)[1],to=end(x_interp)[1],by=sample_spacing),lo$fitted,col='blue',lwd=3)
+	axis(2)
+	axis(1,labels=FALSE,at=seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing),xlab=FALSE)
+	offset=0.1*(max(x_ts,na.rm=TRUE)-min(x_ts,na.rm=TRUE))
+	text(seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing), par("usr")[3] - offset, labels = labels, srt = 45,adj=0.9, xpd = TRUE)
+	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(datamat)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
+}
+```
+
+
+
+
+## Within-network connectivity 
+
+#### Get p-values for trends
+```{r wincorrModel}
+datamat=load_fmri_data() 
+varname='wincorr'
+sample_spacing=1
+
+pvals=c()
+# first get fdr p-vals on trends
+for (varnum in 1:(dim(datamat)[2]-1)) {
+  alldays = seq(min(datamat$date), max(datamat$date), by='1 day')
+	alldays_weekly=seq(min(datamat$date), max(datamat$date), by='1 week')
+	
+	x=get_x_ts(datamat,alldays,scale=FALSE)
+	spacing=60
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
+	x_ts=na.approx(zoo(x[,varnum]),maxgap=7)
+	
+	x_interp=x_ts
+	x_interp=na.approx(zoo(x[,varnum]))
+	
+	s_poly=(seq(length(x[,varnum])) - mean(seq(length(x[,varnum]))))**2
+	s_poly=(s_poly - mean(s_poly))
+	s_poly=s_poly/max(s_poly)
+	s_lin=seq(length(x[,varnum])) - mean(seq(length(x[,varnum])))
+	s_lin=s_lin/max(s_lin)
+	
+	# take weekly mean for auto.arima analysis, due to NAs
+	a=auto.arima(x[,varnum],xreg=cbind(s_poly,s_lin),allowdrift=FALSE)
+	p=cwp(a)
+	poly.loc=which(names(data.frame(p)) == "s_poly")
+	lin.loc=which(names(data.frame(p)) == "s_lin")
+	pvals=rbind(pvals,c(mean(x_ts,na.rm=TRUE), var(a$residuals,na.rm=TRUE),p[4,lin.loc],p[4,poly.loc]))
+}
+p_fdr=p.adjust(pvals[,3:4],method='BH')
+p_fdr=matrix(p_fdr,length(p_fdr)/2,2)
+
+pvals=as.data.frame(pvals)
+pvals[,3:4]=p_fdr
+names(pvals)=c('mean','var(resid)','Linear trend (p-val)','Poly trend (p-val)')
+row.names(pvals)=names(datamat)[1:12]
+
+kable(pvals)
+if (save_latex) {
+  k=kable(pvals,format='latex',digits=4)
+  write(k,file=sprintf('%s/timeseries/tables/wincorr_timeseries_stats.tex',basedir))
+}
+
+
+```
+
+#### now make plots
+
+```{r wincorrPlot}
+for (varnum in 1:(dim(datamat)[2]-1)) {
+	alldays = seq(min(datamat$date), max(datamat$date), by='1 day')
+	alldays_weekly=seq(min(datamat$date), max(datamat$date), by='1 week')
+	
+	x=get_x_ts(datamat,alldays,scale=FALSE)
+	spacing=60
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=na.approx(zoo(x[,varnum]),maxgap=7)
 	
 	x_interp=x_ts
@@ -181,21 +270,21 @@ for (varnum in 1:(dim(data)[2]-1)) {
 	axis(1,labels=FALSE,at=seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing),xlab=FALSE)
 	offset=0.1*(max(x_ts,na.rm=TRUE)-min(x_ts,na.rm=TRUE))
 	text(seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing), par("usr")[3] - offset, labels = labels, srt = 45,adj=0.9, xpd = TRUE)
-	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(data)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
+	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(datamat)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
 }
 ```
 
 ## RNA-seq
 
-```{r}
-data=load_rnaseq_data()
+```{r rnaseqModel}
+datamat=load_rnaseq_data()
 mod_des=read.table('http://s3.amazonaws.com/openfmri/ds031/RNA-seq/module_descriptions.txt',sep='\t')
 data_names=c()
-for (i in 1:(dim(data)[2]-1)) {
-  	data_names=rbind(data_names,sprintf('%s:%s',names(data)[i],mod_des$V2[i]))
+for (i in 1:(dim(datamat)[2]-1)) {
+  	data_names=rbind(data_names,sprintf('%s:%s',names(datamat)[i],mod_des$V2[i]))
 		}
 data_names=rbind(data_names,'date')
-names(data)=data_names
+names(datamat)=data_names
 
 varname='Eigengene expression'
 sample_spacing=7
@@ -203,12 +292,12 @@ sample_spacing=7
 # first get pvals
 pvals=c()
 
-for (varnum in 1:(dim(data)[2]-1)) {
-	alldays = seq(min(data$date), max(data$date), by='1 week')
+for (varnum in 1:(dim(datamat)[2]-1)) {
+	alldays = seq(min(datamat$date), max(datamat$date), by='1 week')
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=zoo(x[,varnum])
 	
 	x_interp=x_ts
@@ -238,13 +327,13 @@ pvals[,3:4]=p_fdr
 names(pvals)=c('mean','var(resid)','Linear trend (p-val)','Poly trend (p-val)')
 
 
-row.names(pvals)=names(data)[1:dim(pvals)[1]]
+row.names(pvals)=names(datamat)[1:dim(pvals)[1]]
 
 
 kable(pvals)
 if (save_latex) {
   k=kable(pvals,format='latex',digits=3)
-  write(k,file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/timeseries_stats_tables/wgcna_timeseries_stats.tex')
+  write(k,file=sprintf('%s/timeseries/tables/wgcna_timeseries_stats.tex',basedir))
 }
 
 
@@ -253,18 +342,19 @@ if (save_latex) {
 
 #### Generate plots
 
-```{r}
-for (varnum in 1:(dim(data)[2]-1)) {
-	alldays = seq(min(data$date), max(data$date), by='1 week')
+```{r rnaseqPlot}
+for (varnum in 1:(dim(datamat)[2]-1)) {
+	alldays = seq(min(datamat$date), max(datamat$date), by='1 week')
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=zoo(x[,varnum])
 	
 	x_interp=x_ts
 	x_interp=na.approx(x_interp)
 	
+  pdf(file=sprintf('/Users/poldrack/data/selftracking/rna-seq/timeseries_plots/module%03d.pdf',varnum),width=12,height=4)
 
 	lo <- loess(x_interp ~ seq(from=start(x_interp)[1],to=end(x_interp)[1],by=sample_spacing),span=0.5)
 	pred=predict(lo,se=TRUE)
@@ -275,7 +365,8 @@ for (varnum in 1:(dim(data)[2]-1)) {
 	axis(1,labels=FALSE,at=seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing),xlab=FALSE)
 	offset=0.1*(max(x_ts,na.rm=TRUE)-min(x_ts,na.rm=TRUE))
 	text(seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing), par("usr")[3] - offset, labels = labels, srt = 45,adj=0.9, xpd = TRUE)
-	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(data)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
+	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(datamat)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
+  dev.off()
 }
 
 ```
@@ -285,17 +376,17 @@ for (varnum in 1:(dim(data)[2]-1)) {
 
 #### Get p-values
 
-```{r}
-data=load_metab_data() 
+```{r metabModel}
+datamat=load_metab_data() 
 varname='Metabolite eigenconcentration'
 sample_spacing=7
 
 data_names=c()
-for (i in 1:(dim(data)[2]-1)) {
-    data_names=rbind(data_names,sprintf('C%d:%s',i,names(data)[i]))
+for (i in 1:(dim(datamat)[2]-1)) {
+    data_names=rbind(data_names,sprintf('C%d:%s',i,names(datamat)[i]))
 		}
 data_names=rbind(data_names,'date')
-names(data)=data_names
+names(datamat)=data_names
 
 
 
@@ -303,17 +394,17 @@ pvals=c()
 
 # first get pvals
 
-for (varnum in 1:(dim(data)[2]-1)) {
+for (varnum in 1:(dim(datamat)[2]-1)) {
 	if (sample_spacing==7) {
-		alldays = seq(min(data$date), max(data$date), by='1 week')
+		alldays = seq(min(datamat$date), max(datamat$date), by='1 week')
 	} else {
-		alldays = seq(min(data$date), max(data$date), by='1 day')
+		alldays = seq(min(datamat$date), max(datamat$date), by='1 day')
 	}
 
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=zoo(x[,varnum])
 	
 	x_interp=x_ts
@@ -342,12 +433,12 @@ pvals[,3:4]=p_fdr
 names(pvals)=c('mean','var(resid)','Linear trend (p-val)','Poly trend (p-val)')
 
 
-row.names(pvals)=names(data)[1:dim(pvals)[1]]
+row.names(pvals)=names(datamat)[1:dim(pvals)[1]]
 
 kable(pvals)
 if (save_latex) {
   k=kable(pvals,format='latex',digits=3)
-  write(k,file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/timeseries_stats_tables/metab_timeseries_stats.tex')
+  write(k,file=sprintf('%s/timeseries/tables/metab_timeseries_stats.tex',basedir))
 }
 
 
@@ -355,12 +446,12 @@ if (save_latex) {
 
 #### Make plots
 
-```{r}
-for (varnum in 1:(dim(data)[2]-1)) {
+```{r metabPlot}
+for (varnum in 1:(dim(datamat)[2]-1)) {
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=zoo(x[,varnum])
 	
 	x_interp=x_ts
@@ -376,7 +467,7 @@ for (varnum in 1:(dim(data)[2]-1)) {
 	axis(1,labels=FALSE,at=seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing),xlab=FALSE)
 	offset=0.1*(max(x_ts,na.rm=TRUE)-min(x_ts,na.rm=TRUE))
 	text(seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing), par("usr")[3] - offset, labels = labels, srt = 45,adj=0.9, xpd = TRUE)
-	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(data)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
+	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(datamat)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
 }
 
 
@@ -384,8 +475,8 @@ for (varnum in 1:(dim(data)[2]-1)) {
 
 ## ImmPort immune system pathways
 
-```{r}
-data=load_ImmPort_data()
+```{r immportModel}
+datamat=load_ImmPort_data()
 
 varname='Eigengene expression'
 sample_spacing=7
@@ -393,12 +484,12 @@ varnum=1
 pvals=c()
 # first get pvals
 
-for (varnum in 1:(dim(data)[2]-1)) {
-	alldays = seq(min(data$date), max(data$date), by='1 week')
+for (varnum in 1:(dim(datamat)[2]-1)) {
+	alldays = seq(min(datamat$date), max(datamat$date), by='1 week')
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=zoo(x[,varnum])
 	
 	x_interp=x_ts
@@ -427,12 +518,12 @@ pvals=as.data.frame(pvals)
 pvals[,3:4]=p_fdr
 names(pvals)=c('mean','var(resid)','Linear trend (p-val)','Poly trend (p-val)')
 
-row.names(pvals)=names(data)[1:15]
+row.names(pvals)=names(datamat)[1:15]
 
 kable(pvals)
 if (save_latex) {
   k=kable(pvals,format='latex',digits=3)
-  write(k,file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/timeseries_stats_tables/immport_timeseries_stats.tex')
+  write(k,file=sprintf('%s/timeseries/tables/immport_timeseries_stats.tex',basedir))
 }
 
 
@@ -441,14 +532,14 @@ if (save_latex) {
 #### Make plots
 
 
-```{r}
+```{r immportPlot}
 
-for (varnum in 1:(dim(data)[2]-1)) {
-	alldays = seq(min(data$date), max(data$date), by='1 week')
+for (varnum in 1:(dim(datamat)[2]-1)) {
+	alldays = seq(min(datamat$date), max(datamat$date), by='1 week')
 	
-	x=get_x_ts(data,alldays,scale=FALSE)
+	x=get_x_ts(datamat,alldays,scale=FALSE)
 	spacing=60
-	labels=seq(from=as.Date(data$date[1]),to=as.Date(data$date[length(data$date)]),by=spacing)
+	labels=seq(from=as.Date(datamat$date[1]),to=as.Date(datamat$date[length(datamat$date)]),by=spacing)
 	x_ts=zoo(x[,varnum])
 	
 	x_interp=x_ts
@@ -464,7 +555,7 @@ for (varnum in 1:(dim(data)[2]-1)) {
 	axis(1,labels=FALSE,at=seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing),xlab=FALSE)
 	offset=0.1*(max(x_ts,na.rm=TRUE)-min(x_ts,na.rm=TRUE))
 	text(seq(from=start(x_interp)[1],to=end(x_interp)[1],by=spacing), par("usr")[3] - offset, labels = labels, srt = 45,adj=0.9, xpd = TRUE)
-	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(data)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
+	title(sprintf('%s - lin p = %0.3f, poly p=%0.3f',names(datamat)[varnum],p_fdr[varnum,1],p_fdr[varnum,2]))
 }
 
 
