--- a/myconnectome/metabolomics/Metabolomics_clustering.Rmd
+++ b/myconnectome/metabolomics/Metabolomics_clustering.Rmd
@@ -29,7 +29,7 @@ metab=scale(metab)
 The annotation tool that we will use requires PubChem IDs, so load those:
 
 ```{r loadCIDs}
-cids=read.table(sprintf('%s/pubmed_cids.txt',dataurl)$V1
+cids=read.table(sprintf('%s/pubmed_cids.txt',dataurl))$V1
 ```
 
 
